--- a/ff6/ff6.html
+++ b/ff6/ff6.html
@@ -8,10 +8,11 @@ title: FF6
     </canvas>
 </div>
 
-<div style="margin-top: 100px;">
-    <textarea onkeyup="updateText()" id="textInput" placeholder="Enter text here..." class="text-input">Shadow: Leave us.
+<div style="margin-top: 100px; display: flex; flex-direction: column; align-items: center; width: 100%;">
+    <textarea onkeyup="updateText()" id="textInput" placeholder="Enter text here..." class="text-input"
+        style="width: 300px; margin-bottom: 10px;">Shadow: Leave us.
 The dog eats strangers...</textarea>
-    <button id="updateButton">Update Text</button>
+    <button id="updateButton" style="width: 120px;">Update Text</button>
 </div>
 
 <script src="script.js"></script>
