--- a/index.html
+++ b/index.html
@@ -2,4 +2,4 @@
 layout: default
 title: messageboxd
 ---
-<a href="ff6/ff6.html" class="button">Final Fantasy VI</a>
+<a href="ff6/ff6.html"><img src="/assets/img/ff6.png" alt="Final Fantasy VI" class="button-image"></a>
