Updated handling of italic font

--- a/games/golden_sun/golden_sun.html
+++ b/games/golden_sun/golden_sun.html
@@ -11,8 +11,9 @@ title: Golden Sun
 </div>
 
 <div class="controls-container">
-    <textarea onkeyup="updateText()" id="textInput" placeholder="Enter text here..." class="text-input">Isaac: The boulder... 
-It destroyed everything...</textarea>
+    <textarea onkeyup="updateText()" id="textInput" placeholder="Enter text here..." class="text-input">“Do not avoid a place
+just because something
+unpleasant may happen.”</textarea>
     <div class="special-chars-container">
         <button class="special-char-btn" data-char="block">Block</button>
         <button class="special-char-btn" data-char="a_button">A Button</button>
