Make special chars buttons dynamic

--- a/games/golden_sun/golden_sun.html
+++ b/games/golden_sun/golden_sun.html
@@ -11,21 +11,11 @@ title: Golden Sun
 </div>
 
 <div class="controls-container">
-    <textarea onkeyup="updateText()" id="textInput" placeholder="Enter text here..." class="text-input">“Do not avoid a place
+    <textarea onkeyup="updateText()" id="textInput" placeholder="Enter text here..." class="text-input">"Do not avoid a place
 just because something
-unpleasant may happen.”</textarea>
+unpleasant may happen."</textarea>
     <div class="special-chars-container">
-        <button class="special-char-btn" data-char="block">Block</button>
-        <button class="special-char-btn" data-char="a_button">A Button</button>
-        <button class="special-char-btn" data-char="b_button">B Button</button>
-        <button class="special-char-btn" data-char="l_button_1">L Button 1</button>
-        <button class="special-char-btn" data-char="l_button_2">L Button 2</button>
-        <button class="special-char-btn" data-char="r_button_1">R Button 1</button>
-        <button class="special-char-btn" data-char="r_button_2">R Button 2</button>
-        <button class="special-char-btn" data-char="start_button_1">Start Button 1</button>
-        <button class="special-char-btn" data-char="start_button_2">Start Button 2</button>
-        <button class="special-char-btn" data-char="select_button_1">Select Button 1</button>
-        <button class="special-char-btn" data-char="select_button_2">Select Button 2</button>
+        <!-- Special character buttons will be generated dynamically by JavaScript -->
     </div>
 </div>
 
