Add button for golden sun in the front page

--- a/index.html
+++ b/index.html
@@ -2,4 +2,8 @@
 layout: default
 title: messageboxd
 ---
-<a href="games/ff6/ff6.html"><img src="/assets/img/ff6.png" alt="Final Fantasy VI" class="button-image"></a>
+<div class="image-container">
+    <a href="games/ff6/ff6.html"><img src="/assets/img/ff6.png" alt="Final Fantasy VI" class="button-image"></a>
+    <a href="games/golden_sun/golden_sun.html"><img src="/assets/img/golden_sun.png" alt="Golden Sun"
+            class="button-image"></a>
+</div>
