Use both golden_sun fonts

--- a/games/golden_sun/index.html
+++ b/games/golden_sun/index.html
@@ -11,9 +11,11 @@ title: Golden Sun
 </div>
 
 <div class="controls-container">
-    <textarea onkeyup="updateText()" id="textInput" placeholder="Enter text here..." class="text-input">"Do not avoid a place
-just because something
-unpleasant may happen."</textarea>
+    <div class="font-toggle-container">
+        <button id="toggleFont" class="toggle-btn">Switch to Variable Width Font</button>
+    </div>
+    <textarea onkeyup="updateText()" id="textInput" placeholder="Enter text here..." class="text-input">Hello!
+</textarea>
     <div class="special-chars-container">
         <!-- Special character buttons will be generated dynamically by JavaScript -->
     </div>
