Load variable width from ROM (not working)

--- a/games/golden_sun/index.html
+++ b/games/golden_sun/index.html
@@ -14,7 +14,9 @@ title: Golden Sun
     <div class="font-toggle-container">
         <button id="toggleFont" class="toggle-btn">Switch to Variable Width Font</button>
     </div>
-    <textarea onkeyup="updateText()" id="textInput" placeholder="Enter text here..." class="text-input">Hello!
+    <textarea onkeyup="updateText()" id="textInput" placeholder="Enter text here..." class="text-input">Short Sword
+Cotton Shirt
+Padded Gloves
 </textarea>
     <div class="special-chars-container">
         <!-- Special character buttons will be generated dynamically by JavaScript -->
