Improve howto FF6

--- a/games/ff6/index.html
+++ b/games/ff6/index.html
@@ -25,6 +25,8 @@ The dog eats strangers...</textarea>
         <button class="special-char-btn" data-char="water">Water</button>
         <button class="special-char-btn" data-char="poison">Poison</button>
     </div>
+    <br>
+    <p>More info <a href="howto/">here</a></p>
 </div>
 
 <script src="script.js"></script>
